libs/pavex_cli/tests/ui_tests/singletons_must_be_sync/expectations/stderr.txt
Error: 
  × `app::NonSyncSingleton` does not implement the `core::marker::Sync` trait.
    ╭─[src/lib.rs:18:1]
 18 │ pub fn blueprint() -> AppBlueprint {
 19 │     AppBlueprint::new().constructor(f!(crate::NonSyncSingleton::new), Lifecycle::Singleton)
    ·                                     ────────────────┬───────────────
    ·                                                     ╰── The singleton's constructor was registered here
 20 │ }
    ╰────